--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,45 @@
 * {
   padding: 0;
   margin: 0; }
+
+/* Header */
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .logo img {
+    height: 120px;
+    width: 120px;
+    margin: 10px 0px 10px 50px; }
+
+#header {
+  padding: 0px;
+  margin: 0px;
+  background-color: #A1BFB6;
+  margin-bottom: 50px; }
+
+.titulo {
+  display: flex;
+  align-items: center; }
+  .titulo h1 {
+    margin: 0px 0px 0px 30px; }
+
+/* Botones Header */
+.contbtn {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.fotoM {
+  height: 65px;
+  width: 120px;
+  margin: 0px 40px 0px 0px; }
+
+.logos {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row; }
+  .logos #icono1 {
+    height: 50px;
+    width: 50px; }
