--- a/css/mainF.css
+++ b/css/mainF.css
@@ -2,24 +2,54 @@
   margin: 0;
   padding: 0; }
 
+#margen {
+  margin: 0;
+  padding: 0; }
+
 .contFut-text-parrafo {
-  background-color: aqua;
-  width: 70%;
-  height: 250px;
-  margin-left: 15%;
+  background-color: beige;
+  height: 300px;
+  /*margin-left: 15%;*/
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  border-radius: 12px;
+  border: solid 1px black; }
   .contFut-text-parrafo .contFut-balon1 {
     height: 100%;
-    width: 350px;
-    background-color: red;
-    margin-left: 20px; }
+    width: 400px;
+    margin-left: 20px;
+    margin-top: 15px; }
   .contFut-text-parrafo .contFut-parrafo1 {
-    background-color: green;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     display: flex;
     align-items: center;
     text-align: center;
-    margin-left: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     font-size: 20px; }
+
+@media screen and (max-width: 1023px) {
+  .contFut-text-parrafo {
+    margin: 0;
+    height: 750px;
+    display: flex;
+    flex-direction: column;
+    padding: 0; }
+    .contFut-text-parrafo .contFut-balon1 {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .contFut-text-parrafo img {
+      height: 300px;
+      width: 300px; } }
+
+.contFut-salud {
+  background-color: aqua;
+  height: 900px;
+  width: 90%;
+  display: flex; }
