--- a/css/mainF.css
+++ b/css/mainF.css
@@ -48,8 +48,22 @@
       height: 300px;
       width: 300px; } }
 
-.contFut-salud {
+.contFut-padre-salud {
   background-color: aqua;
-  height: 900px;
-  width: 90%;
-  display: flex; }
+  height: 1000px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .contFut-padre-salud .contFut-salud {
+    background-color: red;
+    width: 80%;
+    height: 80%; }
+    .contFut-padre-salud .contFut-salud .contFut-padre-fila1 {
+      width: 100%;
+      height: 300px;
+      background-color: blue; }
+    .contFut-padre-salud .contFut-salud .contFut-imagen-fila1-salud {
+      width: 300px;
+      height: 100%;
+      background-color: green; }
