--- a/scss/mainF.scss
+++ b/scss/mainF.scss
@@ -60,10 +60,26 @@
     }
 }
 
-.contFut-salud{
+.contFut-padre-salud{
     background-color: aqua;
-    height: 900px;
-    width: 90%;
+    height: 1000px;
+    width: 100%;
     display: flex;
-
+    justify-content: center;
+    align-items: center;
+    .contFut-salud{
+        background-color: red;
+        width: 80%;
+        height: 80%;
+        .contFut-padre-fila1{
+            width: 100%;
+            height: 300px;
+            background-color: blue;
+        }   
+        .contFut-imagen-fila1-salud{
+            width: 300px;
+            height: 100%;
+            background-color: green;
+        }
+    }
 }
