--- a/scss/mainF.scss
+++ b/scss/mainF.scss
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 #margen{
@@ -11,16 +12,17 @@
 }
 
 .contFut-text-parrafo{
-    background-color: beige;
+    background-color: white;
     height: 300px;
     /*margin-left: 15%;*/
     display: flex;
     flex-direction: row;
     border-radius: 12px;
-    border: solid 1px black;
+    border: solid 1px green;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
     .contFut-balon1{
         height: 100%;
-        width: 400px;
+        width: 450px;
         margin-left: 20px;
         margin-top: 15px;
     }
@@ -28,12 +30,14 @@
         width: 90%;
         height: 90%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         text-align: center;
         margin-left: 5%;
         margin-right: 5%;
         font-size: 20px;
-        
+        margin-top: 20px;
+        color: black;
     }
 }
 
@@ -60,26 +64,23 @@
     }
 }
 
-.contFut-padre-salud{
-    background-color: aqua;
-    height: 1000px;
-    width: 100%;
+.contFut-padre-fila1-salud{
+    background-image: url(../assets/imagenes/bombonera.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
-    .contFut-salud{
-        background-color: red;
-        width: 80%;
-        height: 80%;
-        .contFut-padre-fila1{
-            width: 100%;
-            height: 300px;
-            background-color: blue;
-        }   
-        .contFut-imagen-fila1-salud{
-            width: 300px;
-            height: 100%;
-            background-color: green;
-        }
+    .contFut-fila1{
+        background-color: white;
+        height: 300px;
+        border: solid 1px black;
+        border-radius: 12px;
+        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
     }
 }
+
+
+
+ 
