--- a/scss/mainF.scss
+++ b/scss/mainF.scss
@@ -64,23 +64,40 @@
     }
 }
 
-.contFut-padre-fila1-salud{
-    background-image: url(../assets/imagenes/bombonera.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 500px;
+.conFut-tarjetas-salud{
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    background-color: rgb(207, 205, 205);
+    height: 550px;
+    justify-content: space-around;
     align-items: center;
-    .contFut-fila1{
-        background-color: white;
-        height: 300px;
-        border: solid 1px black;
-        border-radius: 12px;
-        box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
-    }
-}
+    
+    .tarjeta{
+        background-image: url(../assets/imagenes/bombonera.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 480px;
+        border: solid 1px white;
+        border-radius: 10px;
+       .contFut-imagen-tarjeta-salud{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .conFut-text-tarjeta-salud{
+            backdrop-filter: blur(5px);
+            border: solid 1px white;
+            .contFut-lista-tarjeta-salud{
+                color: black;
+            }
 
+            .contFut-parrafo-tarjeta-salud{
+                color: black;
+                text-align: center;
+            }
+        }
+    }   
+}  
 
 
  
