--- a/css/mainNat.css
+++ b/css/mainNat.css
@@ -1,4 +1,39 @@
-*{
-    padding: 0;
-    margin: 0;
-}
+* {
+  padding: 0;
+  margin: 0; }
+
+/* Header */
+#header {
+  background-color: #f5e6d7;
+  margin: 0;
+  padding: 0; }
+
+.logoP, .maslogos {
+  display: flex;
+  align-items: center; }
+  .logoP img, .maslogos img {
+    width: 180px;
+    height: 180px; }
+
+.maslogos {
+  justify-content: space-around; }
+  .maslogos img {
+    width: 40px;
+    height: 40px; }
+  .maslogos .menu {
+    width: 130px;
+    height: 60px; }
+  .maslogos button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: solid black 1px; }
+    .maslogos button:hover {
+      background: linear-gradient(to right, #0e788d85, #19ffff98);
+      border: solid #25645a 1px;
+      transform: translate(1.1, 1.1px); }
+    .maslogos button p {
+      font-size: 20px;
+      margin: 4px 0px 6px 5px;
+      color: black; }
