--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,50 @@
 @import "menu";
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#body{
+    background: gray;
+}
+
+.contPrin-carrousel{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 1000px;
+    height: 600px;
+    background: #f5f5f5;
+    box-shadow: 0 30px 50px #dbdbdb;
+    
+    .contPrin-carrousel-slide{
+
+        .contPrin-carrousel-slide-fondo{
+            width: 200px;
+            height: 300px;
+            position: absolute;
+            top: 50%;
+            transform: translate(0, -50%);
+            border-radius: 20px;
+            box-shadow: 0 30px 50px #505050;
+            background-position: 50% 50%;
+            background-size: cover;
+            display: inline-block;
+            transition: 0.5s;
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(1),.contPrin-carrousel-slide-fondo:nth-child(2){
+            top: 0;
+            left: 0;
+            transform: translate(0, 0);
+            border-radius: 0;
+            width: 100%;
+            height: 100%;
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(3), .contPrin-carrousel-slide-fondo:nth-child(4), .contPrin-carrousel-slide-fondo:nth-child(4){
+            left: 50%;
+        }
+    }
+}
