--- a/css/mainNat.css
+++ b/css/mainNat.css
@@ -4,7 +4,7 @@
 
 /* Header */
 #header {
-  background-color: #f5e6d7;
+  background-color: #f0f0f0;
   margin: 0;
   padding: 0; }
 
@@ -37,3 +37,31 @@
       font-size: 20px;
       margin: 4px 0px 6px 5px;
       color: black; }
+
+.cont1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: url(../assets/imagenes/natP.png);
+  background-size: cover;
+  width: 100%;
+  height: 400px;
+  border-top: 2px solid black; }
+
+.contHijo1 {
+  display: flex;
+  width: 52%;
+  height: 70%;
+  flex-direction: column;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  margin: 30px 0px 30px 10px;
+  box-shadow: 1px 1px 5px 1px;
+  border-radius: 10px;
+  text-align: center; }
+  .contHijo1 h2 {
+    margin: 10px 0px 0px 0px; }
+  .contHijo1 p {
+    margin: 15px 20px 0px 20px;
+    font-size: 20px; }
