--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,7 +5,7 @@
 
 /* Header */
 #header{
-    background-color: #f5e6d7;
+    background-color: rgb(240, 240, 240);
     margin: 0;
     padding: 0;
 }
