--- a/scss/mainNat.scss
+++ b/scss/mainNat.scss
@@ -1,2 +1,33 @@
 @import "menu";
 
+.cont1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background: url(../assets/imagenes/natP.png);
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border-top: 2px solid black;
+}
+
+.contHijo1{
+    display: flex;
+    width: 52%;
+    height: 70%;
+    flex-direction: column;
+    align-items: center;
+    backdrop-filter: blur(10px);
+    margin: 30px 0px 30px 10px;
+    box-shadow: 1px 1px 5px 1px;
+    border-radius: 10px;
+    text-align: center;
+    h2{
+        margin: 10px 0px 0px 0px;
+    }
+    p{
+        margin: 15px 20px 0px 20px;
+        font-size: 20px;
+    }
+}
