--- a/css/mainV.css
+++ b/css/mainV.css
@@ -1,2 +1,74 @@
 * {
-  margin: 40px; }
+  margin: 0;
+  border: 0;
+  font-family: Arial, Helvetica, sans-serif; }
+
+h1 {
+  text-align: center;
+  color: white; }
+
+p {
+  color: white; }
+
+h2 {
+  text-align: center;
+  color: white; }
+
+.contvol {
+  background-color: red;
+  height: 450px;
+  width: 440px;
+  margin-left: 800px;
+  margin-top: 15px;
+  border-radius: 10%; }
+
+.img1 {
+  border-radius: 15px; }
+
+.tecnicas {
+  text-align: left; }
+
+.contvol-2 {
+  background-color: red;
+  height: 450px;
+  width: 440px;
+  margin-left: 200px;
+  margin-top: 15px;
+  border-radius: 10%; }
+
+.img2 {
+  border-radius: 15px; }
+
+.contvol-3 {
+  background-color: red;
+  height: 550px;
+  width: 440px;
+  margin-left: 800px;
+  margin-top: 15px;
+  border-radius: 6%; }
+
+.img3 {
+  border-radius: 15px; }
+
+.equipoCH {
+  background-color: aqua;
+  width: 100%;
+  margin-top: 15px; }
+
+.CH {
+  margin-right: 50px;
+  border-radius: 100%; }
+
+.p2 {
+  text-align: center;
+  display: inline; }
+
+.equipoEU {
+  width: 50%;
+  margin-left: 300px;
+  margin-top: 15px; }
+
+.equipoBR {
+  width: 50%;
+  margin-left: 300px;
+  margin-top: 15px; }
