--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,17 +34,82 @@
             background-size: cover;
             display: inline-block;
             transition: 0.5s;
+            .contPrin-carrousel-slide-fondo-info{
+                position: absolute;
+                top: 50%;
+                left: 100px;
+                width: 300px;
+                text-align: left;
+                color: #eee;
+                transform: translate(0, -50%);
+                font-family: system-ui;
+                display: none;
+            }
         }
-        .contPrin-carrousel-slide-fondo:nth-child(1),.contPrin-carrousel-slide-fondo:nth-child(2){
+        .contPrin-carrousel-slide-fondo:nth-child(1){
             top: 0;
             left: 0;
             transform: translate(0, 0);
             border-radius: 0;
             width: 100%;
             height: 100%;
+            
         }
-        .contPrin-carrousel-slide-fondo:nth-child(3), .contPrin-carrousel-slide-fondo:nth-child(4), .contPrin-carrousel-slide-fondo:nth-child(4){
+        .contPrin-carrousel-slide-fondo:nth-child(2){
+            @extend .contPrin-carrousel-slide-fondo:nth-child(1);
+            
+            .contPrin-carrousel-slide-fondo-info{
+                display: block;
+                .contPrin-carrousel-slide-fondo-info-nombre{
+                    font-size: 40px;
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    opacity: 0;
+                    animation: animar ease-in-out 0.2s 1 forwards;
+                }
+                .contPrin-carrousel-slide-fondo-info-descripcion{
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    opacity: 0;
+                    animation: animar ease-in-out 0.3s 1 forwards;
+                }
+                button{
+                    padding: 10px 20px;
+                    border: none;
+                    cursor: pointer;
+                    opacity: 0;
+                    animation: animar ease-in-out 0.6s 1 forwards;
+                }
+            }
+        }
+
+        .contPrin-carrousel-slide-fondo:nth-child(3){
             left: 50%;
         }
+        .contPrin-carrousel-slide-fondo:nth-child(4){
+            left: calc(50% + 220px);
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(5){
+            left: calc(50% + 440px);
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(n + 6){
+            left: calc(50% + 660px);
+            opacity: 0;
+        }
+
+            
+    }
+}
+
+@keyframes animar {
+    from{
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
     }
 }
