--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,7 +5,7 @@
 
 /* Header */
 #header{
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(248, 248, 248);
     margin: 0;
     padding: 0;
 }
@@ -26,6 +26,7 @@
     img{
         width: 40px;
         height: 40px;
+        margin: 3px 0px 3px 0px;
     }
     .menu{
         width: 130px;
@@ -35,17 +36,16 @@
     button{
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
-        border: solid black 1px;
+        border: solid #0e788d85 1px;
         &:hover{
             background: linear-gradient(to right, #0e788d85, #19ffff98);
             border: solid #25645a 1px;
-            transform: translate(1.1,1.1px);
         }
 
         p{
-            font-size: 20px;
+            font-size: 16px;
             margin: 4px 0px 6px 5px;
             color: black;
         }
