--- a/scss/mainNat.scss
+++ b/scss/mainNat.scss
@@ -1,15 +1,20 @@
 @import "menu";
 
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Griffy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+ font-family: "Poppins", sans-serif;
+}
+
 .cont1{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: url(../assets/imagenes/natP.png);
     background-size: cover;
     width: 100%;
-    height: 400px;
-    border-top: 2px solid black;
+    border-top: 1px solid #0e788d85;
 }
 
 .contHijo1{
@@ -19,7 +24,7 @@
     flex-direction: column;
     align-items: center;
     backdrop-filter: blur(10px);
-    margin: 30px 0px 30px 10px;
+    margin: 50px 0px 30px 10px;
     box-shadow: 1px 1px 5px 1px;
     border-radius: 10px;
     text-align: center;
@@ -27,7 +32,129 @@
         margin: 10px 0px 0px 0px;
     }
     p{
-        margin: 15px 20px 0px 20px;
+        margin: 20px 20px 20px 20px;
         font-size: 20px;
     }
+}
+
+/* Cards de Gotas */
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
+.container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 50px 0;
+    gap: 40px 30px;
+}
+
+.container .drop {
+    position: relative;
+    width: 350px;
+    height: 350px;
+    box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05),
+        25px 35px 20px rgba(0, 0, 0, 0.05),
+        25px 30px 30px rgba(0, 0, 0, 0.05),
+        inset -20px -20px 25px rgba(255, 255, 255, 0.9);
+    transition: 0.5s ease-in-out;
+}
+
+.container .drop:nth-child(1) {
+    border-radius: 45% 55% 31% 69% / 49% 45% 55% 51%;
+}
+
+.container .drop:nth-child(2) {
+    border-radius: 50% 50% 31% 69% / 66% 36% 64% 34%;
+}
+
+.container .drop:nth-child(3) {
+    border-radius: 57% 43% 43% 57% / 43% 43% 57% 57%;
+}
+
+.container .drop:hover {
+    border-radius: 50%;
+}
+
+.container .drop::before {
+    content: '';
+    position: absolute;
+    top: 15%;
+    left: 20%;
+    width: 35px;
+    height: 35px;
+    background-color: #fff;
+    border-radius: 50%;
+    opacity: 0.9;
+}
+
+.container .drop::after {
+    content: '';
+    position: absolute;
+    top: 22%;
+    left: 31%;
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    border-radius: 50%;
+    opacity: 0.9;
+}
+
+.container .drop .content {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 50px;
+    gap: 15px;
+}
+
+.container .drop .content h2 {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background-color: #eff0f4;
+    border-radius: 50%;
+    box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.1),
+        inset -2px -5px 10px rgba(255, 255, 255, 0.1),
+        15px 15px 10px rgba(0, 0, 0, 0.05),
+        15px 10px 15px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    color: var(--clr);
+}
+
+.container .drop .content a {
+    position: relative;
+    padding: 10px 25px;
+    background: var(--clr);
+    text-decoration: none;
+    color: #fff;
+    border-radius: 25px;
+    font-weight: 500;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+    opacity: 0.75;
+    transition: 0.5s;
+}
+
+.container .drop .content a:hover {
+    opacity: 1;
+}
+
+.container .drop .content a::before {
+    content: '';
+    position: absolute;
+    top: 8px;
+    left: 68px;
+    transform: translateX(-50%);
+    width: 65%;
+    height: 5px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
