--- a/css/mainF.css
+++ b/css/mainF.css
@@ -41,119 +41,62 @@
       margin: 4px 0px 6px 5px;
       color: black; }
 
-.contFut-text-parrafo {
+.padre {
+  height: 400px;
   background-color: white;
-  height: 300px;
-  /*margin-left: 15%;*/
   display: flex;
-  flex-direction: row;
-  border-radius: 12px;
-  border: solid 1px gray;
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5); }
-  .contFut-text-parrafo .contFut-balon1 {
-    height: 90%;
-    width: 400px;
-    margin-left: 20px;
-    margin-top: 15px; }
-  .contFut-text-parrafo .contFut-parrafo1 {
-    width: 90%;
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: 20px;
-    margin-top: 20px;
-    color: black; }
-
-@media screen and (max-width: 1023px) {
-  .contFut-text-parrafo {
-    margin: 0;
-    height: 750px;
-    display: flex;
-    flex-direction: column;
-    padding: 0; }
-    .contFut-text-parrafo .contFut-balon1 {
-      width: 100%;
+  justify-content: center; }
+  .padre .cuadrado-fondo {
+    background-color: black;
+    height: 300px;
+    margin-top: 50px;
+    transition: background-color 0.3s ease; }
+    .padre .cuadrado-fondo:hover {
+      background-color: #78fcfc; }
+    .padre .cuadrado-fondo .contenedor-tarjeta {
+      background-color: #f1eded;
       height: 100%;
-      margin: 0;
-      padding: 0;
+      position: relative;
+      right: 15px;
+      bottom: 15px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center; }
+      .padre .cuadrado-fondo .contenedor-tarjeta .contenedor-imagen {
+        background-color: red;
+        height: 80%;
+        border-radius: 80%; }
+      .padre .cuadrado-fondo .contenedor-tarjeta .contenedor-parrafo {
+        text-align: center;
+        color: black;
+        font-size: 18px;
+        margin-left: 20px; }
+
+.contenedor-tarjetas {
+  background-color: #ebe6e6;
+  height: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center; }
+  .contenedor-tarjetas .tarjeta {
+    border-radius: 15px;
+    height: 500px;
+    background-color: #262626;
+    transition-duration: 1s; }
+    .contenedor-tarjetas .tarjeta .contenedor-imagen {
+      width: 100%;
+      height: 200px;
+      border-radius: 15px;
+      background-image: url(../assets/imagenes/bombonera.png);
+      background-size: cover;
+      background-repeat: no-repeat;
       display: flex;
       justify-content: center;
       align-items: center; }
-    .contFut-text-parrafo img {
-      height: 300px;
-      width: 300px; } }
-
-.tarjeta1 {
-  background-image: url(../assets/imagenes/bombonera.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 510px;
-  border: solid 1px white;
-  border-radius: 10px; }
-  .tarjeta1 .contFut-imagen-tarjeta-salud {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .tarjeta1 .conFut-text-tarjeta-salud {
-    backdrop-filter: blur(5px);
-    border: solid 1px white; }
-    .tarjeta1 .conFut-text-tarjeta-salud .contFut-lista-tarjeta-salud {
-      color: black; }
-    .tarjeta1 .conFut-text-tarjeta-salud .contFut-parrafo-tarjeta-salud {
-      color: black;
-      text-align: center; }
-
-.tarjeta2 {
-  background-image: url(../assets/imagenes/monumental.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 510px;
-  border: solid 1px white;
-  border-radius: 10px; }
-  .tarjeta2 .contFut-imagen-tarjeta-salud {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .tarjeta2 .conFut-text-tarjeta-salud {
-    backdrop-filter: blur(5px);
-    border: solid 1px white; }
-    .tarjeta2 .conFut-text-tarjeta-salud .contFut-lista-tarjeta-salud {
-      color: black; }
-    .tarjeta2 .conFut-text-tarjeta-salud .contFut-parrafo-tarjeta-salud {
-      color: black;
-      text-align: center; }
-
-.tarjeta3 {
-  background-image: url(../assets/imagenes/racing.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 510px;
-  border: solid 1px white;
-  border-radius: 10px; }
-  .tarjeta3 .contFut-imagen-tarjeta-salud {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .tarjeta3 .conFut-text-tarjeta-salud {
-    backdrop-filter: blur(5px);
-    border: solid 1px white; }
-    .tarjeta3 .conFut-text-tarjeta-salud .contFut-lista-tarjeta-salud {
-      color: black; }
-    .tarjeta3 .conFut-text-tarjeta-salud .contFut-parrafo-tarjeta-salud {
-      color: black;
-      text-align: center; }
-
-.conFut-tarjetas-salud {
-  display: flex;
-  flex-direction: row;
-  background-color: #cfcdcd;
-  height: 550px;
-  justify-content: space-around;
-  align-items: center; }
+    .contenedor-tarjetas .tarjeta:hover {
+      box-shadow: 5px 5px 10px black;
+      border: solid 1px green; }
 
 .contFut-grande-mapa {
   height: 500px;
@@ -175,3 +118,25 @@
     justify-content: center; }
     .contFut-grande-mapa .contfut-mapa iframe {
       width: 80%; }
+
+@media screen and (max-width: 1023px) {
+  .padre {
+    height: 800px; }
+    .padre .cuadrado-fondo {
+      min-height: 700px; }
+      .padre .cuadrado-fondo .contenedor-tarjeta {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap; }
+        .padre .cuadrado-fondo .contenedor-tarjeta .contenedor-parrafo {
+          margin-top: 20px; }
+        .padre .cuadrado-fondo .contenedor-tarjeta .contenedor-imagen {
+          margin-top: 10px;
+          width: 300px;
+          height: 300px; }
+  .tarjeta1 {
+    margin-top: 20px; }
+  .tarjeta2 {
+    margin-top: 20px; }
+  .tarjeta3 {
+    margin-top: 20px; } }
