--- a/scss/mainF.scss
+++ b/scss/mainF.scss
@@ -109,6 +109,8 @@
         height: 500px;
         background-color: #262626;
         transition-duration: 1s;
+        display: flex;
+        flex-wrap: wrap;
         .contenedor-imagen{
             width: 100%;
             height: 200px;
@@ -184,5 +186,19 @@
     .tarjeta3{
         margin-top: 20px;
     }
-
+    .contenedor-tarjetas{
+        height: 2200px;
+        display: flex;
+        flex-wrap: wrap;
+        .tarjeta{
+            width: 100%;
+            height: 700px;
+            .contenedor-imagen{
+                height: 300px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }   
+    }
 }
