--- a/css/mainF.css
+++ b/css/mainF.css
@@ -52,7 +52,7 @@
     margin-top: 50px;
     transition: background-color 0.3s ease; }
     .padre .cuadrado-fondo:hover {
-      background-color: #78fcfc; }
+      background-color: #bb7518; }
     .padre .cuadrado-fondo .contenedor-tarjeta {
       background-color: #f1eded;
       height: 100%;
@@ -75,30 +75,41 @@
 
 .contenedor-tarjetas {
   background-color: #ebe6e6;
-  height: 600px;
+  height: 700px;
   display: flex;
   justify-content: space-evenly;
   align-items: center; }
   .contenedor-tarjetas .tarjeta {
     border-radius: 15px;
-    height: 500px;
+    height: 600px;
     background-color: #262626;
     transition-duration: 1s;
     display: flex;
-    flex-wrap: wrap; }
+    flex-direction: column; }
     .contenedor-tarjetas .tarjeta .contenedor-imagen {
-      width: 100%;
       height: 200px;
-      border-radius: 15px;
-      background-image: url(../assets/imagenes/bombonera.png);
-      background-size: cover;
-      background-repeat: no-repeat;
+      width: 100%; }
+    .contenedor-tarjetas .tarjeta .titulo {
       display: flex;
       justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: white;
+      height: 80px; }
+    .contenedor-tarjetas .tarjeta .parrafo-tarjeta {
+      color: white;
+      height: 300px;
+      width: 100%;
+      background-color: #333333;
+      border-bottom-left-radius: 15px;
+      border-bottom-right-radius: 15px;
+      display: flex;
       align-items: center; }
+      .contenedor-tarjetas .tarjeta .parrafo-tarjeta p {
+        margin-left: 10px; }
     .contenedor-tarjetas .tarjeta:hover {
-      box-shadow: 5px 5px 10px black;
-      border: solid 1px green; }
+      box-shadow: 4px 4px 10px #3a3939;
+      border: solid 1px #bb7518; }
 
 .contFut-grande-mapa {
   height: 500px;
@@ -148,7 +159,9 @@
     flex-wrap: wrap; }
     .contenedor-tarjetas .tarjeta {
       width: 100%;
-      height: 700px; }
+      height: 700px;
+      display: flex;
+      flex-direction: column; }
       .contenedor-tarjetas .tarjeta .contenedor-imagen {
         height: 300px;
         display: flex;
