--- a/scss/mainF.scss
+++ b/scss/mainF.scss
@@ -70,7 +70,7 @@
         margin-top: 50px;
         transition: background-color 0.3s ease;
         &:hover{
-            background-color: rgb(120, 252, 252);
+            background-color: rgb(187, 117, 24);
         }
         .contenedor-tarjeta{
             background-color: #f1eded;
@@ -100,31 +100,45 @@
 
 .contenedor-tarjetas{
     background-color: #ebe6e6;
-    height: 600px;
+    height: 700px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     .tarjeta{
         border-radius: 15px;
-        height: 500px;
+        height: 600px;
         background-color: #262626;
         transition-duration: 1s;
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         .contenedor-imagen{
-            width: 100%;
             height: 200px;
-            border-radius: 15px;
-            background-image: url(../assets/imagenes/bombonera.png);
-            background-size: cover;
-            background-repeat: no-repeat;
+            width: 100%;
+        }
+        .titulo{
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
+            color: white;
+            height: 80px;
+        }
+        .parrafo-tarjeta{
+            color: white;
+            height: 300px;
+            width: 100%;
+            background-color: #333333;
+            border-bottom-left-radius: 15px;
+            border-bottom-right-radius: 15px;
+            display: flex;
+            align-items: center;
+            p{
+                margin-left: 10px;
+            }
         }
         &:hover{
-            box-shadow: 5px 5px 10px black;
-            border: solid 1px green;
+            box-shadow: 4px 4px 10px rgb(58, 57, 57);
+            border: solid 1px rgb(187, 117, 24);
         }
     }   
 }
@@ -193,6 +207,8 @@
         .tarjeta{
             width: 100%;
             height: 700px;
+            display: flex;
+            flex-direction: column;
             .contenedor-imagen{
                 height: 300px;
                 display: flex;
