--- a/scss/mainV.scss
+++ b/scss/mainV.scss
@@ -3,13 +3,12 @@
     border: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 h1{
     text-align: center;
-    color: white;
+    color: rgb(255, 0, 0);
 }
 p{
-    color: white;
+    color: rgb(255, 0, 0);
 }
 h2{
     text-align: center;
@@ -17,7 +16,7 @@ h2{
 }
 
 .contvol{
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 4, 252);
     height: 450px;
     width: 440px;
     margin-left: 800px;
@@ -28,12 +27,10 @@ h2{
     border-radius: 15px;
 }
 .tecnicas{
-    text-align: left;
-    
+    text-align: left; 
 }
-
 .contvol-2{
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 4, 252);
     height: 450px;
     width: 440px;
     margin-left: 200px;
@@ -45,7 +42,7 @@ h2{
 }
 
 .contvol-3{
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 4, 252);
     height: 550px;
     width: 440px;
     margin-left: 800px;
@@ -56,27 +53,6 @@ h2{
     border-radius: 15px;
 }
 
-.equipoCH{
-    background-color: aqua;
-    width: 100%;
-    margin-top: 15px;
-}
-.CH{
-    margin-right: 50px;
-    border-radius: 100%;
-}
-.p2{
-    text-align: center;
-    display: inline;
-}
-.equipoEU{
-    width: 50%;
-    margin-left: 300px;
-    margin-top: 15px;
-}
-
-.equipoBR{
-    width: 50%;
-    margin-left: 300px;
-    margin-top: 15px;
+.contevol-4{
+    
 }
