--- a/css/mainF.css
+++ b/css/mainF.css
@@ -1,13 +1,10 @@
 * {
-  margin: 0;
-  padding: 0; }
+  padding: 0;
+  margin: 0; }
 
-#margen {
-  margin: 0;
-  padding: 0; }
-
+/* Header */
 #header {
-  background-color: #f5e6d7;
+  background-color: #ebe6e6;
   margin: 0;
   padding: 0; }
 
@@ -22,30 +19,41 @@
   justify-content: space-around; }
   .maslogos img {
     width: 40px;
-    height: 40px; }
+    height: 40px;
+    margin: 3px 0px 3px 0px; }
   .maslogos .menu {
     width: 130px;
     height: 60px; }
   .maslogos button {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    border: solid black 1px; }
+    border: solid #0e788d85 1px; }
     .maslogos button:hover {
       background: linear-gradient(to right, #0e788d85, #19ffff98);
-      border: solid #25645a 1px;
-      transform: translate(1.1, 1.1px); }
+      border: solid #25645a 1px; }
     .maslogos button p {
-      font-size: 20px;
+      font-size: 16px;
       margin: 4px 0px 6px 5px;
       color: black; }
 
+* {
+  margin: 0;
+  padding: 0; }
+
+#margen {
+  margin: 0;
+  padding: 0; }
+
 .padre {
-  height: 400px;
-  background-color: white;
+  height: 500px;
+  background-image: url(../assets/imagenes/monumental.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
   .padre .cuadrado-fondo {
     background-color: black;
     height: 300px;
