--- a/css/main.css
+++ b/css/main.css
@@ -164,8 +164,7 @@
   /*box-sizing: border-box;*/ }
 
 #body {
-  background: gray;
-  overflow: hidden; }
+  background: gray; }
 
 /*link a deportes1*/
 .link {
